--- a/src/index.html
+++ b/src/index.html
@@ -7,20 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body style="background-color: #828080;">
   <app-root></app-root>
 
-  <script>
-    var width = 20;
-
-function move() {
-  var elem = document.getElementById("progressskrrt");
-    if (width < 100) {
-      width+=10;
-      elem.style.width = width + '%';
-      elem.innerHTML = width * 1 + '%';
-    }
-  }
-    </script>
 </body>
 </html>
+  
